test/fail/internal/invalid_try_except_return_fold.lly
#[
SyntaxError: Missing return statement at end of function.
    from invalid_try_except_return_fold.lly:12
]#

define f(a: integer => integer)
{
    try:
        a = 1
    except Exception:
        return 2
}
